Modernise and tidy SolrIndexMetadataDocumentGenerator and its tests
Behaviour-preserving cleanup of the Solr index generator:

- buildResourceIdentifiers: rewrite the mutable-accumulator loop as a single
  stream/flatMap; the code emptiness check is now evaluated once.
- getLocations: use pattern-matching instanceof (consistent with inmsScale).
- getRecordType: null-safe catalogue compare ("eidc".equals(...)).
- Modernise stream terminals to Stream.toList(); inmsScale now owns its
  mutable list instead of mutating grab's (now immutable) return.
- Use Lombok @RequiredArgsConstructor; drop the low-value "Creating" log and
  downgrade the per-document index log from info to debug.
- Remove the dead SA_TAXON_URL constant, tighten INMS_SCALE_URL to private,
  drop the unused LocalDateTime import and a stray fully-qualified Instant,
  and use ZoneOffset.UTC.

Tests:
- Add the previously-missing resourceIdentifier coverage (code+codeSpace
  indexes both the bare code and codeSpace:code; code-only; codeSpace-only).
- Replace weak assertTrue(contains) checks with Hamcrest matchers.
- Move the SolrIndex-only description-shortening tests to a new SolrIndexTest,
  leaving the generator test focused on generateIndex.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>